# household_assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  agent.py  bot.py  config.py  main.py  session.py  system_prompt.md
