[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-assistant"
version = "0.1.0"
description = "AI-powered Telegram bot with Notion integration via MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiogram>=3.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-mcp-adapters",
    "openai",
    "aiosqlite",
    "pydantic-settings",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
